<resources>
    <string name="app_name">Aplikasi Activity</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="ini_adalah_halaman_move_activity">ini adalah halaman move activity</string>
    <string name="pindah_dengan_data">Pindah Dengan Data</string>
    <string name="data_received">data_received</string>
    <string name="pindah_dengan_objek">Pindah dengan Objek</string>
    <string name="object_received">object_received</string>
    <string name="dial_number">Telepon</string>
    <string name="choose_number">choose number</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">choose</string>
    <string name="move_with_result">move_with_result</string>
    <string name="result_from_activity">result_from_activity</string>
    <string name="hasil">Hasil</string>
</resources>